Updated GUI and maybe Final Commit.